2006-11-28  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Fix bug in --{en|dis}able-wxwidgets

2006-11-26  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* docs/gnuplot.doc: For filledcurves, the default variant depends
	on the number of columns in the input data.

2006-11-26  James R. Van Zandt  <jrvz@comcast.net>

	* term/README: tweak wording of _image documentation.

2006-11-25  Mike Sutton  <mws116@usa.com>

	* term/gd.trm (PNG_init PNG_vector PNG_point): Fix off-by-one error
	in specifying brush definitions that control line width.

2006-11-22  Ethan Merritt  <merritt@u.washington.edu>

	* term/pdf.trm (PDF_graphics):  The multiplier from 'set size' was being
	applied twice, so the resulting plot scaled as the square of the size.
	Apply it only once, to the plot, not to the canvas.

	* term/pbm.trm (PBM_graphics PBM_options): Decouple 'set size' from
	'set term pbm size XX,YY'. The latter will always yield an XX,YY image.
	Keep (pre-4.2) behaviour if no explicit terminal size is given.

2006-11-21  Ethan Merritt  <merritt@u.washington.edu>

	I ran the complete set of demos through the svg terminal, and judged the
	result using ksvg via konqueror. This revealed several problems, which
	are fixed by this set of patches. Other svg viewers (mozilla, inkscape,
	OpenOffice) worked less well.

	* term/svg.trm (SVG_PathLimit SVG_MoveForced):  Avoid ridiculously
	long paths by limiting total path length to 512.
	Allows konqueror to handle the last plot of vector.dem.

	* term/svg.trm:  Avoid opening/closing new paths unnecessarily.
	This prevents creating a new group for every filled_polygon, and
	drastically reduces the size of output files containing pm3d objects
	or pixel images.

	*term/svg.trm:  Clipping in the core code is still not perfect.
	Handle y coordinate overflow gracefully.

2006-11-19  Ethan Merritt  <merritt@u.washington.edu>

	* term/fig.trm (FIG_set_color): The case of TC_LT was handled
	incorrectly.
	Bug #1599346
